Width mod to fix a scrollbar issue

--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -7,7 +7,7 @@
 }
 
 #docspage-content {
-	width: 92%;
+	width: 90%;
 	position: absolute;
 	left: 2%;
 }
